# lazylore

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
src/: app.rs  cache.rs  config.rs  lib.rs  lore.rs  lore_config.rs  main.rs  manifest.rs  model.rs  tree.rs  ui.rs  watcher.rs
tests/fixtures/: auth-info.ndjson  branches.ndjson  diff.ndjson  status.ndjson  unauthorized-status.ndjson
