[package]
name = "lazylore"
version = "0.1.2"
edition = "2024"
rust-version = "1.96"
description = "A lazygit-inspired terminal UI for Epic's Lore version control system"
authors = ["Peralysis <stefanperales@outlook.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Peralysis/lazylore"
homepage = "https://github.com/Peralysis/lazylore"
keywords = ["lore", "vcs", "tui", "terminal", "ratatui"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0"
ansi-to-tui = "8.0.1"
arboard = { version = "3.6", default-features = false }
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.29", features = ["event-stream"] }
directories = "6.0"
dunce = "1.0"
futures-util = "0.3"
ignore = "0.4"
notify = "8.0"
open = "5.3"
ratatui = "0.30"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.20"
thiserror = "2.0"
tokio = { version = "1.45", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
toml = "1"
tui-banner = "0.2.3"

[dev-dependencies]
pretty_assertions = "1.4"

[profile.release]
lto = "thin"
strip = true

